<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.melanie.androidactivities.AddProductActivity" >

    <include
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        layout="@layout/layout_header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/selectCategory" />

    <Spinner
        android:id="@+id/categoriesSpinner"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/productName" />

    <EditText
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:hint="@string/productNameHint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/Quantity" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:hint="@string/productQuantityHint"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/Price" />

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:hint="@string/amountZeroes"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/addProductButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:onClick="addProduct"
        android:text="@string/add" />

    <ImageView
        android:id="@+id/barcodeImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/products" />

</LinearLayout>