<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context="com.melanie.androidactivities.CustomersActivity" >

     <include
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        layout="@layout/layout_header" />

     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="12dp"
        android:text="@string/nameWithColon" />

    <EditText
        android:id="@+id/customerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:hint="@string/customerNameHint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/phoneNumber" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:hint="@string/phoneHint"
        android:inputType="phone" />
     
    <Button
        android:id="@+id/addCustomerButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/add"
        android:onClick="addCustomer" />
</LinearLayout>
