<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/headerRow"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:background="#CCCCCC" >

    <TextView
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:text="@string/qty"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:text="@string/each"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_weight="0.2"
        android:text="@string/total"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

</TableRow>