<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.melanie.androidactivities.CategoryActivity" >

    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoriesList" />
    
    <ListView 
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:id="@+id/categoryList"
        android:layout_weight="3" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_name" />

    <EditText
        android:id="@+id/categoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterCategoryName" />

    <Button
        android:id="@+id/addCategoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addCategory"
        android:text="@string/add" />

        <TextView
        android:id="@+id/resultTempView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>