<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.melanie.androidactivities.RecordCostsActivity" >

    <ListView
        android:id="@+id/costListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/totals"
        android:divider="@null"
        android:minHeight="300dp" />

    <LinearLayout
        android:id="@+id/totals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/costSaveButton"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/total" />

        <TextView
            android:id="@+id/costTotalTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="right"
            android:text="@string/amountZeroes" />
    </LinearLayout>

    <Button
        android:id="@+id/costSaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</RelativeLayout>