<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.melanie.androidactivities.SalesActivity" >

    <include
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/layout_header" />

    <LinearLayout
        android:id="@+id/salesAggregatesContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TableRow
            android:layout_marginTop="4dp"
            android:layout_marginBottom="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/total"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0.3"
                android:gravity="right"
                android:text="@string/amountZeroes"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/discountLabel" />

            <EditText
                android:id="@+id/discountValue"
                android:ellipsize="start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="right"
                android:hint="@string/amountZeroes"
                android:inputType="numberDecimal"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/amountReceived"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/amountReceived"
                android:ellipsize="start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="right"
                android:hint="@string/amountZeroes"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/balance"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/balanceDue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0.3"
                android:gravity="right"
                android:text="@string/amountZeroes"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/saveSale"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/save" />

            <Button
                android:id="@+id/cancelSale"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="7dp"
                android:text="@string/cancel" />
        </TableRow>
    </LinearLayout>

    <ListView
        android:id="@+id/salesListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/salesAggregatesContainer"
        android:layout_below="@id/header"
        android:choiceMode="none" />

    
</RelativeLayout>