<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/startDateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.25"
            android:text="@string/startDate" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:background="@drawable/round"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/startDate"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/backroundselector"
                android:paddingLeft="8dp"
                android:paddingRight="5dp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:contentDescription="@string/pickDate"
                android:scaleType="center"
                android:src="@drawable/calendar" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/endDateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.25"
            android:text="@string/endDate" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:background="@drawable/round"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/endDate"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/backroundselector"
                android:paddingLeft="8dp"
                android:paddingRight="5dp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:contentDescription="@string/pickDate"
                android:scaleType="center"
                android:src="@drawable/calendar" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>